--- a/MyShop/Views/Product/Details.cshtml
+++ b/MyShop/Views/Product/Details.cshtml
@@ -1,66 +1,126 @@
 ﻿@model ProductVM
 @{
-    Layout = "_Layout";
+	Layout = "_Layout";
 }
-<div class="container">
-    <div class="prods_details">
-        <div class="prodimg">
-            <img src="~/assets/img/product/@Model.Image" />
-        </div>
-        <div class="prod_content">
-            <div class="form-group">
-                <h2>@Model.Title @Model.Memory GB (@Model.ProdColor)</h2>
-            </div>
 
-            <div class="form-group">
-                <p><b>@Model.Description</b></p>
-            </div>
-            <div class="form-group">
-                @foreach (var item in Model.PAVVMs.GroupBy(p => p.Name))
-                {
-                    <span>@item.Key :</span>
-                        foreach (var item1 in item)
-                        {
-                            if (item1 == item.Last())
-                            {
-                                <span>@item1.Value</span>
-                            }
-                            else
-                            {
-                                <span>@item1.Value,</span>
-                            }
-                        }
-                    
+@section head {
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="~/assets/css/product.css" />
+}
+<section class="product">
+	<div class="container">
+		<div class="product__wrapper">
+			<div class="swiper mySwiper">
+				<div class="swiper-wrapper">
+					<div class="product__img swiper-slide">
+						<img src="~/assets/img/product/@Model.Image" />
+					</div>
+					<div class="product__img swiper-slide">
+						<img src="~/assets/img/product/@Model.Image" />
+					</div>
+					<div class="product__img swiper-slide">
+						<img src="~/assets/img/product/@Model.Image" />
+					</div>
+				</div>
+				<div class="swiper-pagination"></div>
+			</div>
 
-                    <br />
-                }
-            </div>
-            <div class="form-group">
-                <br />
-                @if (Model.Discount > 0)
-                {
-                    <span>@Model.FinalPrice.ToString("N0") AMD.</span>
-                    <span class="prodprice">@Model.Price.ToString("N0") AMD</span>
-                }
-                else
-                {
-                    <span>@Model.Price.ToString("N0") AMD</span>
-                }
+			<div class="product__info">
+				<h1 class="product__title">@Model.Title @Model.Memory GB (@Model.ProdColor)</h1>
+				<p class="product__description">@Model.Description</p>
+				<div class="form-group">
+					@foreach (var item in Model.PAVVMs.GroupBy(p => p.Name))
+					{
+						<span>@item.Key :</span>
+						foreach (var item1 in item)
+						{
+							if (item1 == item.Last())
+							{
+								<span>@item1.Value</span>
+							}
+							else
+							{
+								<span>@item1.Value,</span>
+							}
+						}
+						<br />
+					}
+				</div>
+
+				@* <div class="form-group">
+				<br />
+				<p>Discount: @Model.Discount</p>
+				</div> *@
+				<form asp-area="" asp-controller="Cart" asp-action="AddToBasket" asp-route-productId="@Model.Id" asp-route-FinalPrice="@ViewBag.FinalPrice" asp-route-fromprodpage="true" class="addToCartForm" id="addToCart">
+					<div class="pricing-range">
+						<button type="button" class="dec button count-dec" data-product="@Model.Id">-</button>
+						<input type="number" class="product-value product-count" id="product-count" name="count" value="@ViewBag.Count" min="0" max="200" readonly>
+						<button type="button" class="inc button count-inc" data-product="@Model.Id">+</button>
+					</div>
 
 
-            </div>
-            <div class="form-group">
-                <br />
-                @*<p>Discount: @Model.Discount</p>*@
+					<div class="product__price">
+						@if (Model.Discount > 0)
+						{
+							<span>@Model.FinalPrice.ToString("N0") AMD.</span>
+							<span class="prodprice">@Model.Price.ToString("N0") AMD</span>
+						}
+						else
+						{
+							<span>@Model.Price.ToString("N0") AMD</span>
+						}
 
-            </div>
-            <div class="form-group">
-                <form asp-area="" asp-controller="Cart" asp-action="AddToBasket" asp-route-productId="@Model.Id" asp-route-FinalPrice="@ViewBag.FinalPrice" asp-route-fromprodpage="true">
-                    Count : <input type="number" min="0" max="200" value="@ViewBag.Count" name="count">
-                    <input type="submit" value="Add To Cart" onclick="alert('Added')">
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="~/js/formexecution.js"></script>
+					</div>
+
+
+					<input type="submit" class="addToCart" value="Add To Cart">
+
+
+					@* 	Count : <input type="number" min="0" max="200" value="@ViewBag.Count" name="count">
+					<input type="submit" value="Add To Cart" onclick="alert('Added')"> *@
+				</form>
+
+			</div>
+		</div>
+
+
+
+	</div>
+</section>
+
+@section scripts {
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			var swiper = new Swiper(".mySwiper", {
+				pagination: {
+					el: ".swiper-pagination",
+				},
+			});
+
+			const decrementButton = document.querySelector('.count-dec');
+			const incrementButton = document.querySelector('.count-inc');
+			const countInput = document.querySelector('.product-count');
+
+			decrementButton.addEventListener('click', function () {
+				let currentValue = parseInt(countInput.value, 10);
+				if (currentValue > parseInt(countInput.min, 10)) {
+					countInput.value = currentValue - 1;
+				}
+			});
+
+			incrementButton.addEventListener('click', function () {
+				let currentValue = parseInt(countInput.value, 10);
+				if (currentValue < parseInt(countInput.max, 10)) {
+					countInput.value = currentValue + 1;
+				}
+			});
+			
+		});
+
+	</script>
+
+	<script src="~/assets/js/addToBasket.js"></script>
+}
+
