--- a/MyShop/wwwroot/assets/css/style.css
+++ b/MyShop/wwwroot/assets/css/style.css
@@ -40,7 +40,7 @@ html, body {
     -webkit-text-size-adjust: 100%;
     font-family: "Roboto", sans-serif;
     color: var(--black);
-    background:var(--default-color)
+    background: var(--default-color)
 }
 
 input, button, textarea {
@@ -86,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 auto;
     padding: 0 20px;
 }
+
 .title {
     font-size: 26px;
 }
@@ -98,9 +99,9 @@ main {
 .header {
     background: var(--orange);
     padding: 20px 0;
-    color:var(--black);
-    position:fixed;
-    width:100%;
+    color: var(--black);
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 99;
 }
@@ -131,14 +132,15 @@ main {
         font-size: 20px;
         transition: all 0.3s ease
     }
+
         .header__right a:hover {
             opacity: .7
         }
 
-        .header__search {
-            max-width: 300px;
-            width: 100%
-        }
+.header__search {
+    max-width: 300px;
+    width: 100%
+}
 
     .header__search input {
         padding: 15px 40px 15px 15px;
@@ -192,6 +194,10 @@ main {
         font-size: 14px;
     }
 
+        .header__basket span.basket__count.more {
+            font-size: 11px;
+        }
+
 .nav {
     margin-top: 20px;
 }
@@ -212,7 +218,100 @@ main {
         border-radius: 5px;
         transition: 0.3s ease all
     }
+
         .nav__list li a:hover {
             background-color: var(--white);
             color: var(--orange)
         }
+
+.count-range {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px;
+    border-radius: 10px;
+    margin-top: 15px;
+    max-width: 200px;
+}
+
+    .count-range button {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background: transparent;
+        transition: 0.3s background ease;
+        border: 1px solid #ECECEC;
+        position: relative;
+        font-size: 20px;
+        cursor: pointer;
+    }
+
+    .count-range input {
+        margin: 0 auto;
+        text-align: center;
+        font-size: 20px;
+        line-height: 130%;
+        background: transparent;
+    }
+
+.floating-label-input {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+    .floating-label-input .label {
+        background-color: #fff;
+        color: #49454f;
+        top: 0px;
+        left: 16px;
+        pointer-events: none;
+        position: absolute;
+        transform-origin: top left;
+        transition: all 0.2s ease-in-out;
+        transform: translateY(-7px);
+        padding: 0 5px;
+        font-size: 12px;
+    }
+
+    .floating-label-input input,
+    .floating-label-input textarea {
+        border: 2px solid #79747e;
+        border-radius: 4px;
+        color: #1d1b20;
+        font-size: 16px;
+        font-weight: 400;
+        padding: 12px 16px;
+        width: 100%;
+        background-color: transparent;
+        transition: border 0.3s ease;
+    }
+
+        .floating-label-input input:focus,
+        .floating-label-input textarea:focus {
+            border: 2px solid var(--orange);
+        }
+
+            .floating-label-input input:focus ~ .label,
+            .floating-label-input textarea:focus ~ .label {
+                color: var(--orange);
+            }
+
+    .floating-label-input textarea {
+        min-height: 102px;
+        resize: none;
+    }
+.btn-orange {
+    color: var(--white);
+    padding: 10px;
+    display: inline-block;
+    font-size: 16px;
+    border: 3px solid transparent;
+    border-radius: 5px;
+    transition: 0.3s ease all;
+    background: var(--orange);
+}
+    .btn-orange:hover {
+        color: var(--orange);
+        background: var(--white);
+        border-color: var(--orange)
+    }
