--- a/MyShop/Views/Shared/Components/CallBackViewComponent/Default.cshtml
+++ b/MyShop/Views/Shared/Components/CallBackViewComponent/Default.cshtml
@@ -1,47 +1,86 @@
 ﻿@model CustomerVM
-<div class="container">
-    <div class="call__wrapper py-5">
-        <form asp-area="" asp-controller="Customer" asp-action="Add" class="call__form" id="customerForm">
-
-            <label>
-                <span class="form__title">Имя</span>
-                <input asp-for="Name" type="text" placeholder="Имя" required />
-            </label>
-            <label>
-                <span class="form__title">Телефон</span>
-                <input asp-for="PhoneNumber" type="text" placeholder="+ 7" required class="tel" autocomplete="off" />
-                @*<small class="valid-message">Проверка не пройдена</small>*@
-            </label>
-            <div>
-                <span class="form__title">
-                    Комментарий
-                </span>
-                <div class="msg">
-                    <textarea class="msg__textarea" asp-for="Message" type="text" placeholder="Напишите комментарии..."></textarea>
-                </div>
-            </div>
-            <label class="captcha-label">
-            <span class="captcha-text">Введите четырехзначный код, содержащий только цифры:</span>
-            <img src="/captcha" class="captcha-img" />
-            <input asp-for="Captcha" type="text" placeholder="1234" required maxlength="4"/>
-            <span class="captcha-error" id="captchaerror"></span>
-
-            </label>
 
 
+<div class="send-message__container" style="display: none" id="send-message">
 
-            <button class="call__btn" @*disabled*@>Отправить</button>
-        </form>
-        
-        <div class="call__content">
-            <strong class="call__title">Обратный звонок</strong>
-            <p>
-                Оставьте заявку на обратный звонок на нашем сайте - мы
-                свяжемся с вами чтобы ответить на все ваши
-                вопросы. Просто заполните форму с вашим именем, номером
-                телефона и пишите сообщщение.
-            </p>
-            <b>Быстро и удобно!</b>
-        </div>
-    </div>
+
+	<div class="wrapperAlert">
+
+		<div class="contentAlert">
+
+			<div class="topHalf">
+
+				<p>
+					<svg viewBox="0 0 512 512" width="100" title="check-circle">
+						<path d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z" />
+					</svg>
+				</p>
+				<strong>Ураааа</strong>
+
+				<ul class="bg-bubbles">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+
+			<div class="bottomHalf">
+
+				<p>Ваш заказ успешно отправлено</p>
+				<a href="/" class="close-send-modal btn">Закрыть</a>
+
+			</div>
+
+		</div>
+
+	</div>
+
+
 </div>
+
+
+
+
+<section class="callback" >
+	<div class="container">
+		<div class="callback__title title">Ունե՞ք հարցեր: Կապնվեք մեզ հետ</div>
+		<div class="call__wrapper">
+			<form asp-area="" asp-controller="Customer" asp-action="Add" id="callback">
+				<input type="hidden" asp-for="Id"/>
+				<div class="floating-label-input">
+					<input asp-for="Name" type="text"
+						   class="form__input"
+						   required />
+					<label class="label">Անուն</label>
+				</div>
+				<div class="floating-label-input">
+					<input asp-for="PhoneNumber" type="text"
+						   class="form__input"
+						   required />
+					<label class="label">Հեռախոսահամար</label>
+				</div>
+				<div class="floating-label-input">
+					<textarea asp-for="Message"
+							  class="form__input"
+							  required></textarea>
+					<label class="label">Հաղորդագրություն</label>
+				</div>
+				<label class="captcha-label">
+					<span class="captcha-text">Captcha</span>
+					<img src="/captcha" class="captcha-img" />
+					<input asp-for="Captcha" type="text" placeholder="1234" required maxlength="4" />
+					<span class="captcha-error" id="captchaerror"></span>
+
+				</label>
+				<button type="submit" class="btn-orange">Ուղարկել</button>
+			</form>
+		</div>
+	</div>
+</section>
