--- a/MyShop/wwwroot/assets/css/style.css
+++ b/MyShop/wwwroot/assets/css/style.css
@@ -81,6 +81,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
 }
 
+main {
+    margin-top: 133.2px;
+}
+
 .container {
     max-width: 1920px;
     margin: 0 auto;
@@ -91,19 +95,19 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 26px;
 }
 
-main {
-    margin-top: 154px;
-}
 
+.header, nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 99;    
+}
 
 .header {
     background: var(--orange);
     padding: 20px 0;
     color: var(--black);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 99;
+   
 }
 
     .header a {
@@ -198,14 +202,15 @@ main {
             font-size: 11px;
         }
 
-.nav {
-    margin-top: 20px;
+nav {
+    margin-top: 93.2px;
+    background: #ff9701;
 }
 
 .nav__list {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 80px;
 }
 
@@ -213,8 +218,7 @@ main {
         color: var(--white);
         padding: 10px;
         display: block;
-        font-size: 16px;
-        border: 3px solid #fff;
+        font-size: 20px;
         border-radius: 5px;
         transition: 0.3s ease all
     }
@@ -260,7 +264,7 @@ main {
 }
 
     .floating-label-input .label {
-        background-color: #fff;
+        background-color: var(--default-color);
         color: #49454f;
         top: 0px;
         left: 16px;
@@ -300,6 +304,7 @@ main {
         min-height: 102px;
         resize: none;
     }
+
 .btn-orange {
     color: var(--white);
     padding: 10px;
@@ -310,8 +315,126 @@ main {
     transition: 0.3s ease all;
     background: var(--orange);
 }
+
     .btn-orange:hover {
         color: var(--orange);
         background: var(--white);
         border-color: var(--orange)
     }
+
+.callback {
+    margin: 50px 0;
+}
+
+    .callback .container {
+        max-width: 800px;
+    }
+
+.callback__title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.callback .floating-label-input {
+    margin-bottom: 25px;
+}
+
+.captcha-label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.captcha-text {
+    font-size: 16px;
+    line-height: 145%;
+    margin-bottom: 0px;
+}
+
+.captcha-img {
+    max-width: 120px;
+    max-height: 120px;
+    margin: 10px 0;
+    padding: 10px 0 0px 20px;
+    background: #000;
+    border-radius: 40px;
+}
+
+.captcha-label input {
+    max-width: 110px;
+    text-align: center;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.captcha-error {
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 10px;
+    color: red;
+    font-weight: 800;
+    display: inline-block;
+    padding: 12px;
+    width: fit-content;
+    border-radius: 5px;
+}
+
+    .captcha-error.active {
+        margin: 15px 0;
+    }
+
+.captcha-label input::placeholder {
+    font-size: 15px;
+}
+
+.callback .btn-orange {
+    width: 100%;
+}
+
+.callback .floating-label-input:nth-child(3) {
+    margin-bottom: 10px !important;
+}
+
+.call__content {
+    max-width: 640px
+}
+
+    .call__content strong {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 130%;
+        margin-bottom: 26px
+    }
+
+    .call__content p {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 130%;
+        margin-bottom: 13px
+    }
+
+    .call__content b {
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 130%
+    }
+    .footer {
+        background: var(--orange);
+        padding: 50px 0;
+    }
+
+@media screen and (max-width: 1024px) {
+    .call__content strong {
+        font-size: 25px;
+        margin-bottom: 20px
+    }
+
+    .call__content p {
+        font-size: 16px
+    }
+
+    .call__content b {
+        font-size: 20px
+    }
+}
