Some Changes in menu,category get all

--- a/MyShop/Views/Shared/_Layout.cshtml
+++ b/MyShop/Views/Shared/_Layout.cshtml
@@ -58,18 +58,8 @@
 			</div>
 		</div>
 	</header>
+	@await Component.InvokeAsync("NavViewComponent")
 
-	<nav class="nav">
-		<div class="container">
-			<ul class="nav__list">
-				<li><a href="">Հեռախոսներ</a></li>
-				<li><a href="">Պլանշետներ</a></li>
-				<li><a href="">Ժամացույցներ</a></li>
-				<li><a href="">Հեռուստացույցներ</a></li>
-				<li><a href="">Համակարգիչներ</a></li>
-			</ul>
-		</div>
-	</nav>
 
 
 
