--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -39,6 +39,7 @@
 									@(item.Count * item.Price)դր.
 								</div>
 								<button type="button" class="item__remove">Հեռացնել</button>
+								@* <a asp-area="" asp-controller="Cart" asp-action="Delete" asp-route-Id="@item.Id" class="item__remove">Հեռացնել</a> *@
 							</div>
 						</form>
 					}
