--- a/MyShop/Views/Home/Index.cshtml
+++ b/MyShop/Views/Home/Index.cshtml
@@ -30,6 +30,7 @@
 	<div class="container">
 		<div class="top-sales__title title">Լավագույն Վաճառք</div>
 		<div class="top-sales__items">
+			@******************** karanq karusel aneq ****************************@
 			@foreach (var item in ViewBag.Hots as List<ShortProductVM>)
 			{
 				<form asp-area="" asp-controller="Cart" asp-action="AddToBasket" asp-route-productId="@item.Id" asp-route-FinalPrice="@item.FinalPrice" asp-route-fromprodpage="true" class="top-sales__item addToCartForm">
@@ -72,7 +73,7 @@
 					<input type="hidden" value="1" name="count" />
 					<div class="item__buttons">
 						<a class="btn-orange" asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug">Ավելին</a>
-						<button type="submit" class="btn-orange addToCart" id="add-toast">Գնել</button>
+						<button type="submit" class="btn-orange addToCart add-toast" @* id="add-toast" *@>Գնել</button>
 					</div>
 				</form>
 
@@ -132,15 +133,32 @@
 
 
 	<script>
-		document.getElementById("add-toast").addEventListener("click", function () {
-			Toastify({
-				text: "Ավելացված է զամբյուղում",
-				duration: 3000,
-				style: {
-					background: "linear-gradient(to right, #00b09b, #96c93d)",
-				}
+		// document.getElementsByClassName("add-toast").addEventListener("click", function () {
+		// 	Toastify({
+		// 		text: "Ավելացված է զամբյուղում",
+		// 		duration: 3000,
+		// 		style: {
+		// 			background: "linear-gradient(to right, #00b09b, #96c93d)",
+		// 		}
 				
-			}).showToast();
+		// 	}).showToast();
+		// });
+		document.addEventListener("DOMContentLoaded", function () {
+			// Get all elements with the class 'add-toast'
+			const buttons = document.getElementsByClassName("add-toast");
+
+			// Loop through the HTMLCollection and add event listeners
+			for (let i = 0; i < buttons.length; i++) {
+				buttons[i].addEventListener("click", function () {
+					Toastify({
+						text: "Ավելացված է զամբյուղում",
+						duration: 3000,
+						style: {
+							background: "linear-gradient(to right, #00b09b, #96c93d)",
+						}
+					}).showToast();
+				});
+			}
 		});
 	</script>
 }
