--- a/MyShop/Views/Home/Search.cshtml
+++ b/MyShop/Views/Home/Search.cshtml
@@ -2,7 +2,6 @@
 @{
     Layout = null;
 }
-<link rel="stylesheet" href="~/css/Search.css" asp-append-version="true" />
 
 @if (Model.Count > 0)
 {
@@ -22,5 +21,5 @@
 }
 else
 {
-    <p class="search-res-no">There isn't any product</p>
+    <p class="search-res-no">Ոչինչ չի գտնվել</p>
 }
