--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -23,11 +23,11 @@
 							
 							<div class="item__left">
 								<div class="item__photo">
-									<img src="~/assets/img/product/1b5fc06f-bf65-4771-bcb2-b4f7d121d2f3.png" alt="@item.Product.Title" />
+									<img src="~/assets/img/product/@item.Product.Image" alt="@item.Product.Title" />
 								</div>
-								<div class="item__title">
+								<a asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Product.Slug" class="item__title">
 									@item.Product.Title @item.Product.Memory GB (@item.Product.ProdColor)
-								</div>
+								</a>
 							</div>
 							<div class="item__right">
 								<div class="item__count count-range">
