--- a/MyShop/wwwroot/assets/css/product.css
+++ b/MyShop/wwwroot/assets/css/product.css
@@ -56,15 +56,15 @@
 
 .addToCart {
     background: transparent;
-    color: var(--orange);
+    color: var(--green);
     padding: 15px 30px;
     cursor: pointer;
     border-radius: 10px;
     transition: all 0.3s ease;
-    border: 1px solid var(--orange)
+    border: 1px solid var(--green)
 }
     .addToCart:hover {
-        background: var(--orange);
+        background: var(--green);
         color: var(--white);
         border-color: transparent;
     }
