--- a/MyShop/wwwroot/assets/css/style.css
+++ b/MyShop/wwwroot/assets/css/style.css
@@ -1,7 +1,8 @@
 ﻿:root {
     --default-color: #f5f6f8;
     --white: #fff;
-    --orange: #ff6117;
+    --green: #006A4E;
+    --green-secondary: #17473b;
     --black: #7d7878;
 }
 
@@ -43,22 +44,14 @@ html, body {
     background: var(--default-color)
 }
 
-input, button, textarea {
-    font-family: inherit;
+input::-ms-clear {
+    display: none;
 }
-
-    input::-ms-clear {
-        display: none;
-    }
 
 button {
     cursor: pointer;
 }
 
-    button::-moz-focus-inner {
-        padding: 0;
-        border: 0;
-    }
 
 a, a:visited {
     text-decoration: none;
@@ -93,6 +86,8 @@ main {
 
 .title {
     font-size: 26px;
+    color: var(--green);
+    font-weight: 700;
 }
 
 
@@ -100,14 +95,14 @@ main {
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 99;    
+    z-index: 99;
 }
 
 .header {
-    background: var(--orange);
+    background: var(--green);
     padding: 20px 0;
     color: var(--black);
-   
+    z-index: 100;
 }
 
     .header a {
@@ -142,7 +137,7 @@ main {
         }
 
 .header__search {
-    max-width: 300px;
+    max-width: 500px;
     width: 100%
 }
 
@@ -193,7 +188,7 @@ main {
         display: flex;
         justify-content: center;
         align-items: center;
-        color: var(--orange);
+        color: var(--green);
         font-weight: 700;
         font-size: 14px;
     }
@@ -204,7 +199,7 @@ main {
 
 nav {
     margin-top: 93.2px;
-    background: #ff9701;
+    background: var(--green-secondary);
 }
 
 .nav__list {
@@ -219,13 +214,12 @@ nav {
         padding: 10px;
         display: block;
         font-size: 20px;
-        border-radius: 5px;
         transition: 0.3s ease all
     }
 
         .nav__list li a:hover {
             background-color: var(--white);
-            color: var(--orange)
+            color: var(--green)
         }
 
 .count-range {
@@ -292,12 +286,12 @@ nav {
 
         .floating-label-input input:focus,
         .floating-label-input textarea:focus {
-            border: 2px solid var(--orange);
+            border: 2px solid var(--green);
         }
 
             .floating-label-input input:focus ~ .label,
             .floating-label-input textarea:focus ~ .label {
-                color: var(--orange);
+                color: var(--green);
             }
 
     .floating-label-input textarea {
@@ -313,13 +307,14 @@ nav {
     border: 3px solid transparent;
     border-radius: 5px;
     transition: 0.3s ease all;
-    background: var(--orange);
+    background: var(--green);
+    line-height: 1;
 }
 
     .btn-orange:hover {
-        color: var(--orange);
+        color: var(--green);
         background: var(--white);
-        border-color: var(--orange)
+        border-color: var(--green)
     }
 
 .callback {
@@ -419,10 +414,84 @@ nav {
         font-size: 25px;
         line-height: 130%
     }
-    .footer {
-        background: var(--orange);
-        padding: 50px 0;
+
+.footer {
+    background: var(--green);
+    padding: 50px 0;
+}
+
+.tag-results {
+    scrollbar-width: thin;
+    top: 50px;
+    background: #fff;
+    width: 100%;
+    height: fit-content;
+    max-height: 450px;
+    min-width: 350px;
+    overflow-y: auto;
+    border-radius: 0;
+    position: absolute;
+    bottom: 0;
+    z-index: 10000;
+    border: 1px solid var(--green);
+    font-weight: 400;
+}
+
+    .tag-results.hidden {
+        display: none;
     }
+
+.search-res {
+    display: flex;
+    flex-direction: column;
+}
+
+.search-res-prods {
+    border-bottom: 1px solid #777;
+    padding: 20px 15px;
+}
+
+
+
+    .search-res-prods .search-link {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: var(--green-secondary);
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+.search-res-no {
+    padding: 20px;
+}
+
+.search-loader {
+    position: absolute;
+    top: 20%;
+    right: 10px;
+    width: 30px;
+    padding: 5px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: #25b09b;
+    --_m: conic-gradient(#0000 10%,#000), linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+    mask: var(--_m);
+    -webkit-mask-composite: source-out;
+    mask-composite: subtract;
+    animation: l3 1s infinite linear;
+}
+    .search-loader.hidden {
+        display:none;
+    }
+
+    @keyframes l3 {
+        to {
+        transform: rotate(360deg) 
+    }
+}
+
 
 @media screen and (max-width: 1024px) {
     .call__content strong {
