product details, add view models

--- a/MyShop/Areas/Admin/Views/Order/Details.cshtml
+++ b/MyShop/Areas/Admin/Views/Order/Details.cshtml
@@ -50,7 +50,7 @@
                             <th>@item.Product.Title @item.Product.Memory GB (@item.Product.ProdColor)</th>
                             <th>
 
-                                <img width="90px" height="auto" src="~/assets/img/product/@item.Product.Image">
+                                <img width="90px" height="auto" src="~/assets/img/product/@item.Product.ImageFile">
                             </th>
                             <th>@item.Count</th>
                         </tr>
