--- a/MyShop/Views/Home/Index.cshtml
+++ b/MyShop/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
 											<img src="~/assets//img/product/@item.ImageFile" alt="" />
 										</div>
 										<div class="item__name">
-											@item.Title (@item.Memory GB)
+											@item.Title (@item.Memory GB) (@item.ProdColor)
 										</div>
 										<div class="item__price">
 											@if (item.Discount > 0)
