--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -23,7 +23,7 @@
 							
 							<div class="item__left">
 								<div class="item__photo">
-									<img src="~/assets/img/product/@item.Product.Image" alt="@item.Product.Title" />
+									<img src="~/assets/img/product/@item.Product.ImageFile" alt="@item.Product.Title" />
 								</div>
 								<a asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Product.Slug" class="item__title">
 									@item.Product.Title @item.Product.Memory GB (@item.Product.ProdColor)
