--- a/MyShop/Areas/Admin/Views/Product/Index.cshtml
+++ b/MyShop/Areas/Admin/Views/Product/Index.cshtml
@@ -22,8 +22,8 @@
                     <tr>
                         <th>Название</th>
                         <th>Короткое Описание</th>
-                        <th>Цена</th>
-                        <th>Скидка</th>
+@*                         <th>Цена</th>
+                        <th>Скидка</th> *@
                         <th>Добавить атрибуты</th>
                         <th>Редактировать</th>
                         <th>Удалить</th>
@@ -34,10 +34,10 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td>@item.Title</td>
+                            <td>@item.Title @item.Memory GB (@item.ProdColor)</td>
                             <td>@item.ShortDescription</td>
-                            <td>@item.Price</td>
-                            <td>@item.Discount</td>
+@*                             <td>@item.Price</td>
+                            <td>@item.Discount</td> *@
                             <td class="table__btn "><a asp-area="Admin" asp-controller="Product" asp-action="AddEditAttribute" asp-route-Id="@item.Id">Добавить атрибуты</a></td>
                             <td class="table__btn "><a asp-area="Admin" asp-controller="Product" asp-action="AddEdit" asp-route-Id="@item.Id">Редактировать</a></td>
                             <td class="table__btn "><a asp-area="Admin" asp-controller="Product" asp-action="Delete" asp-route-Id="@item.Id">Удалить</a></td>
